--- a/teste.ipynb
+++ b/teste.ipynb
@@ -503,9 +503,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limpeza0 = limpa_prep(cleanup(classe0.lower()))\n",
-    "limpeza1 = limpa_prep(cleanup(classe1.lower()))\n",
-    "limpeza2 = limpa_prep(cleanup(classe2.lower()))\n"
+    "limpeza0 = cleanup(classe0.lower())\n",
+    "limpeza1 = cleanup(classe1.lower())\n",
+    "limpeza2 = cleanup(classe2.lower())\n"
    ]
   },
   {
